# PUTM_DV_Optimal_Path_Tracing

./: .gitignore  LICENSE  README.md
Eval/: centerline.py  centerline_search.py  generate_track.py  minimal_curvature.py  parametric_curves.py  raceline.py  raceline_triangles.py  spline_algorithm_comparison.ipynb  spline_algorithms.py  splines.py  track_analysis.py  utility_fcn.py  utility_fncs.py
Node/: CMakeLists.txt  main.cpp  spline.cpp  spline.hpp
Node/Common/: csv.h  math_utility.hpp  opt_assert.hpp  splines.hpp
Node/Common/Bicycle/: bicycle_model.hpp  main.cpp  test_stanley.py
Node/Common/Stanley/: CMakeLists.txt  main.cpp  stanley.csv  stanley.h  test_stanley.py  track.csv
Node/package_control/: CMakeLists.txt  package.xml
Node/package_control/src/: callbacks.cpp  callbacks.hpp  config.hpp  lateral.hpp  longitudinal.hpp  main.cpp  visualization.cpp  visualization.hpp
Node/package_opt/: CMakeLists.txt  package.xml
Node/package_opt/msg/: Cones.msg  optimal_path.msg
Node/package_opt/src/: callbacks.cpp  callbacks.h  callbacks.hpp  common_defs.hpp  cone_rrt.hpp  config.hpp  debug_utility.hpp  delaunay_optimization.hpp  distance.hpp  function_attributes.hpp  main.cpp  math_utility.hpp  rrt_star.cpp  rrt_star.hpp  simulator_wrapper.cpp  simulator_wrapper.hpp  spline.hpp  state_space.hpp  tree.hpp  validity_checker.hpp
Node/package_opt/src/Delaunay/: delaunay.cpp  edge.cpp  triangle.cpp  vector2.cpp  vector2.h
Node/package_opt/src/random/: gaussian.hpp
Node/src/Common/: math_utliity.hpp  splines.hpp
Node/src/package_control/: CMakeLists.txt  package.xml
Node/src/package_control/src/: callbacks.cpp  callbacks.hpp  config.hpp  main.cpp  (+3 more)
Node/src/package_opt/: CMakeLists.txt  package.xml
Node/tests/: CMakeLists.txt  main.cpp  track_loader.hpp
Node/tests/mocks/: ros_mocks.hpp
tests/: CMakeLists.txt  external_tests.cpp  tests.cpp
(+21 files in other folders)
