<?xml version="1.0"?>
<package format="2">
  <name>package_control</name>
  <version>0.0.0</version>
  <description>The package_control package</description>
  <maintainer email="szymon.kostrubiec@student.put.poznan.pl">Szymon Kostrubiec</maintainer>

  <license>MIT</license>

  <depend>package_opt</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
